--- a/company-job-review/src/main/resources/application.properties
+++ b/company-job-review/src/main/resources/application.properties
@@ -4,3 +4,17 @@ spring.jpa.generate-ddl=true
 spring.datasource.url=jdbc:h2:mem:test
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# Actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+info.app.name=JobApplication
+info.app.description=Job app built by thangtran3112
+info.app.version=1.0.0
+
+management.info.env.enabled=true
+
+# This may present a security risk. In production, it should be protected with Spring Security and using a management port
+management.endpoint.shutdown.enabled=true
+server.shutdown=graceful
