add specific postgres version and fix application properties

--- a/company-job-postgres/src/main/resources/application.properties
+++ b/company-job-postgres/src/main/resources/application.properties
@@ -9,11 +9,10 @@ spring.application.name=firstjobapp
 
 # Postgres Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/jobapp
-spring.datasource.username=postgres
+spring.datasource.username=embarkx
 spring.datasource.password=embarkx
 spring.jpa.database=POSTGRESQL
-# Print all SQL statements to console
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
