--- a/company-job-postgres/docker-compose.yaml
+++ b/company-job-postgres/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   postgres:
     container_name: postgres_container
-    image: postgres
+    image: postgres:16.4
     environment:
       POSTGRES_USER: embarkx
       POSTGRES_PASSWORD: embarkx
