--- a/company-job-microservices/companyms/src/main/resources/application.properties
+++ b/company-job-microservices/companyms/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.application.name=companyms
-
 server.port=8081
+spring.application.name=company-service
 
 # H2 Database
 #spring.h2.console.enabled=true
@@ -16,3 +15,8 @@ spring.jpa.database=POSTGRESQL
 # spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
