--- a/company-job-microservices/jobms/src/main/resources/application.properties
+++ b/company-job-microservices/jobms/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+# Zipkin, in Production we should not track every request with probability 1.0
+
+management.tracing.sampling.probability=1.0
