Fetching application properties from Config Server

--- a/company-job-microservices/jobms/src/main/resources/application.properties
+++ b/company-job-microservices/jobms/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8082
-spring.application.name=job-service
+#spring.application.name=job-service
 
 # H2 Database
 #spring.h2.console.enabled=true
@@ -24,3 +24,7 @@ eureka.client.fetch-registry=true
 # Zipkin, in Production we should not track every request with probability 1.0
 
 management.tracing.sampling.probability=1.0
+
+# Config server
+spring.config.import=optional:configserver:http://localhost:8080
+spring.profiles.active=default
