--- a/company-job-microservices/reviewms/src/main/resources/application.properties
+++ b/company-job-microservices/reviewms/src/main/resources/application.properties
@@ -24,3 +24,6 @@ eureka.client.fetch-registry=true
 
 # Zipkin, in Production we should not track every request with probability 1.0
 management.tracing.sampling.probability=1.0
+
+#Disable Config Server
+spring.cloud.config.enabled=false
