--- a/microservices-gateway-lb/companyms/src/main/resources/application.properties
+++ b/microservices-gateway-lb/companyms/src/main/resources/application.properties
@@ -26,3 +26,9 @@ management.tracing.sampling.probability=1.0
 
 #Disable Config Server
 spring.cloud.config.enabled=false
+
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
