--- a/springboot-3-micro-service-demo-main/config-server/src/main/resources/configurations/gateway.yml
+++ b/springboot-3-micro-service-demo-main/config-server/src/main/resources/configurations/gateway.yml
@@ -1,6 +1,6 @@
 eureka:
   client:
-    register-with-eureka: false
+    register-with-eureka: false # Optional, we can also register gateway with Eureka
 server:
   port: 8222
 spring:
